src/objects/n2de__History__c.object
<CustomObject>
    <fields>
        <fullName>n2de__Change_datetime__c</fullName>
        <label>Change datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>n2de__Change_type__c</fullName>
        <inlineHelpText>Change type e.g. update, add, remove</inlineHelpText>
        <label>Change type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__Field__c</fullName>
        <inlineHelpText>Field whose value was altered.</inlineHelpText>
        <label>Field</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__New_value__c</fullName>
        <inlineHelpText>Value of the field after change.</inlineHelpText>
        <label>New value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__Object__c</fullName>
        <inlineHelpText>Name of DE object this edit was for.</inlineHelpText>
        <label>Object</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__Object_id__c</fullName>
        <inlineHelpText>Id of edited object.</inlineHelpText>
        <label>Object id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__Old_value__c</fullName>
        <inlineHelpText>Previous value of the field.</inlineHelpText>
        <label>Old value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__Parent_change_id__c</fullName>
        <inlineHelpText>Id of the parent object this change was part of.</inlineHelpText>
        <label>Parent change id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__Parent_object__c</fullName>
        <inlineHelpText>Type of the parent object this change was part of.</inlineHelpText>
        <label>Parent object type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__User_id__c</fullName>
        <inlineHelpText>Id of the user if this change relates to a user.</inlineHelpText>
        <label>User id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>History</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>